# RadPleura

./: Dockerfile  README.md  RadPleura.sh
docs/: index.html
sourcecode/src/: RadPleura.py
sourcecode/src/vx/radpleura/: BaseHandler.py  Classification.py  ClassificationCNNTL.py  DL.py  Features.py  Pages.py  Query.py  ROI.py  Server.py  Settings.py  SplitImage.py  User.py  Util.py  VSI.py  xROI.py  xrequeriments.txt
sourcecode/src/vx/radpleura/import/algorithms/cc/PleuraSegmentation/: CMakeLists.txt  compile.sh  main.cpp
sourcecode/src/vx/radpleura/import/algorithms/cc/PleuraSegmentation/core/: BoundariesExtractor.cpp  BoundariesExtractor.h  FeatureExtractor.cpp  FeatureExtractor.h  Pipe.h  PreProcessor.cpp  PreProcessor.h  ShowPrediction.h
sourcecode/src/vx/radpleura/import/algorithms/cc/PleuraSegmentation/util/: ColorConverterFilter.cpp
sourcecode/src/vx/radpleura/import/algorithms/cc/ex/: CMakeCache.txt  CMakeLists.txt  Exx  Makefile  cmake_install.cmake  compile.sh  ex.cc
sourcecode/src/vx/radpleura/import/algorithms/px/image/: regions.c  regions.pyx  setup.py
sourcecode/src/vx/radpleura/import/static/lib/: drawio.js  interact.js  lung.js  style.css
sourcecode/src/vx/radpleura/import/templates/: index.html  login.html  lung.html  lungpage.html  simil.html
